testsuite/tests/grammar/invalid_stream_op/test.out
== bad_double_colon.lkt ==
bad_double_colon.lkt:12:34: error: unsupported operator: `::`
12 |     fun invalid_expr() : Int = 1 :: 1
   |                                  ^^


== bad_triple_colon.lkt ==
bad_triple_colon.lkt:12:34: error: unsupported operator: `:::`
12 |     fun invalid_expr() : Int = 1 ::: 1
   |                                  ^^^


lkt_compile: Done
